--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,5 +72,14 @@
     <string name="insulin_title">Insulina</string>
     <string name="cant_delete_in_use_insulin">No puede eliminar una Insulina en uso.</string>
     <string name="total">TOTAL</string>
+    <string name="receive_notifications">Recibir Notificaciones</string>
+    <string name="must_have_notificaion_permissions">Debe permitir las notificaciones para esta aplicación. Cambie esta configuración en los ajustes del dispositivo y vuelva a intentarlo.</string>
+    <string name="active_insulin_expired">Insulina Activa finalizada</string>
+    <string name="notif_created">Notificación creada</string>
+    <string name="create_notif_confirmation">¿Desea crear notificaciones para las insulinas activas ya ingresadas?</string>
+    <string name="notifications">Notificaciones</string>
+    <string name="notif_all_active_insulin_created">Se crearon notificaciones para las insulinas activas</string>
+    <string name="notif_from_now">Se crearán notificaciones a partir de ahora.</string>
+    <string name="active_insulin_expired_info">Información de la Insulina aplicada que acaba de finalizar:</string>
 
 </resources>
