--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -71,11 +71,13 @@
     <string name="hour">"Stunde: "</string>
     <string name="insulin_title">Insulin</string>
     <string name="cant_delete_in_use_insulin">Sie können kein Insulin in Gebrauch löschen.</string>
+    <string name="cant_modif_in_use_insulin">Sie können ein verwendetes Insulin nicht ändern.</string>
     <string name="total">GESAMT</string>
     <string name="receive_notifications">Benachrichtigungen erhalten</string>
     <string name="must_have_notificaion_permissions">Sie müssen Benachrichtigungen für diese App zulassen. Bitte ändern Sie diese Einstellung in den Geräteeinstellungen und versuchen Sie es erneut.</string>
     <string name="active_insulin_expired">aktives Insulin beendet</string>
     <string name="notif_created">Benachrichtigung erstellt</string>
+    <string name="notif_modified">Benachrichtigung geändert</string>
     <string name="create_notif_confirmation">Möchten Sie Benachrichtigungen für bereits eingegebene aktive Insuline erstellen?</string>
     <string name="notifications">Benachrichtigungen</string>
     <string name="notif_all_active_insulin_created">Für aktive Insuline wurden Benachrichtigungen erstellt.</string>
