--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -43,6 +43,7 @@
     <string name="yes">Ja</string>
     <string name="no">Nicht</string>
     <string name="delete_all_active_insulin_confirmation">Möchten Sie alle eingegebenen aktiven Insuline löschen?</string>
+    <string name="delete_all_inactive_insulin_confirmation">Es werden viele inaktive Insuline gespeichert. Möchten Sie sie löschen, um die Anwendung zu beschleunigen?</string>
     <string name="insulin_active_data">Angewandte Insulindaten</string>
     <string name="select_insuline"><font size="15">Wählen Sie ein Insulin aus</font></string>
     <string name="units_applied">Angewandte Einheiten: </string>
@@ -85,5 +86,6 @@
     <string name="active_insulin_expired_info">Informationen zum gerade beendeten Insulinauftrag:</string>
     <string name="notif_not_found">Es wurde keine ausstehende Benachrichtigung gefunden.</string>
     <string name="notif_all_active_insulin_deleted">Ausstehende Benachrichtigungen wurden entfernt.</string>
+    <string name="cant_create_inactive_insulin">Sie können keine Insulindosis eingeben, die bereits inaktiv ist.</string>
 
 </resources>
