--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Insulina Activa</string>
+    <string name="app_name">UI Activa</string>
     <string name="active_insulin_title">Insulina Activa</string>
     <string name="active_insulin">Insulina Activa: </string>
     <string name="calc_time">Hora Cálculo: </string>
@@ -42,8 +42,8 @@
     <string name="delete">Eliminar</string>
     <string name="yes">Si</string>
     <string name="no">No</string>
-    <string name="delete_all_active_insulin_confirmation">¿Desea borrar todas las insulinas activas ingresadas?</string>
-    <string name="delete_all_inactive_insulin_confirmation">Hay muchas insulinas inactivas guardadas. ¿Desea borrarlas para agilizar la aplicación?</string>
+    <string name="delete_all_inactive_insulin_confirmation">¿Desea borrar todas las insulinas inactivas ingresadas?</string>
+    <string name="delete_all_stores_inactive_insulin_confirmation">Hay muchas insulinas inactivas guardadas. ¿Desea borrarlas para agilizar la aplicación?</string>
     <string name="insulin_active_data">Datos de la insulina aplicada </string>
     <string name="select_insuline"><font size="15">Seleccione una insulina</font></string>
     <string name="units_applied">Unidades aplicadas: </string>
@@ -74,8 +74,9 @@
     <string name="cant_delete_in_use_insulin">No puede eliminar una Insulina en uso.</string>
     <string name="cant_modif_in_use_insulin">No puede modificar una Insulina en uso.</string>
     <string name="total">TOTAL</string>
-    <string name="receive_notifications">Recibir Notificaciones</string>
+    <string name="receive_notifications">Recibir Alertas</string>
     <string name="must_have_notificaion_permissions">Debe permitir las notificaciones para esta aplicación. Cambie esta configuración en los ajustes del dispositivo y vuelva a intentarlo.</string>
+    <string name="must_have_backup_permissions">Debe permitir el acceso a Almacenamiento para esta aplicación.</string>
     <string name="active_insulin_expired">Insulina Activa finalizada</string>
     <string name="notif_created">Notificación creada</string>
     <string name="notif_modified">Notificación modificada</string>
@@ -89,5 +90,12 @@
     <string name="cant_create_inactive_insulin">No se puede ingresar una dosis de insulina ya inactiva.</string>
     <string name="color_active">#39a127</string>
     <string name="color_inactive">#ff0000</string>
+    <string name="backup_file">Guardar copia de datos a archivo</string>
+    <string name="backup_file_name">IA_Backup.txt</string>
+    <string name="backup_success">"Copia de respaldo de datos realizado con éxito al Archivo:  "</string>
+    <string name="backup_fail_permission">No se pudo generar la copia de respaldo de los datos. Verifique los permisos de la aplicación.</string>
+    <string name="backup_fail_space_or_permission">No se pudo generar la copia de respaldo. Verifique que tenga espacio en almacenamiento en el dispositivo y/o permisos de la aplicación.</string>
+    <string name="backup_file_headers">Insulina;Laboratorio;Unidades;Duración;Fecha;Descripción;</string>
+    <string name="backup_path">\"Se guardarán un backup de las insulinas inactivas en \"</string>
 
 </resources>
