--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -119,9 +119,14 @@
     <string name="ratio_update">Modificar Ratio</string>
     <string name="hora_msg">Hora del día en que aplica el ratio. (Formato 24hs)</string>
     <string name="ratio_ppal">Ratio</string>
-    <string name="ratio_24_hours">Ratio 24hs.</string>
+    <string name="ratio_24_hours">Ratio en 24hs.</string>
     <string name="ratio_24_hours_msg1">Se utilizará el valor de Ratio ingresado para las 24 horas del día.</string>
     <string name="share_backup">Compartir Datos</string>
     <string name="backup_fail_share">No se pudo compartir el archivo. Verifique que esté generado en </string>
+    <string name="ratio_range_hours_msg">Se utilizará el mismo Ratio para el intervalo de horas indicado (inclusive).</string>
+    <string name="from_hour">Desde:</string>
+    <string name="to_hour">Hasta:</string>
+    <string name="ratio_range_hours">Ratio en Intervalo</string>
+    <string name="invalid_range">Intervalo de tiempo inválido.</string>
 
 </resources>
